domain/src/main/java/com/example/clean_architecture/domain/core/error/FailureHandler.kt
package com.example.clean_architecture.domain.core.error

interface FailureHandler {
    fun handleThrowable(throwable: Throwable): Failure
}